--- a/MotoSocia/WebUI.csproj
+++ b/MotoSocia/WebUI.csproj
@@ -18,6 +18,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="PaulMiami.AspNetCore.Mvc.Recaptcha" Version="1.2.1" />
   </ItemGroup>
   <Target Name="MyPreCompileTarget" BeforeTargets="BeforeBuild">
     <Exec Command="webpack" />
