--- a/MotoSocia/appsettings.json
+++ b/MotoSocia/appsettings.json
@@ -7,5 +7,9 @@
   "ConnectionStrings": {
     "MotoSociaDatabase": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=MotoSocia;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
+  "Recaptcha": {
+    "SiteKey": "6LcgNRcUAAAAADjjVuc-bLgomkTTO6XLxm95xKy3",
+    "SecretKey": "6LcgNRcUAAAAAND5pWOu_wKWi9VA9IMn6kwhcL8f"
+  },
   "AllowedHosts": "*"
 }
