Added EmailServices with SendGrid, added AntiForgeryToken, added authorize for Index page and redirection.

--- a/MotoSocia/WebUI.csproj
+++ b/MotoSocia/WebUI.csproj
@@ -20,6 +20,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
     <PackageReference Include="PaulMiami.AspNetCore.Mvc.Recaptcha" Version="1.2.1" />
+    <PackageReference Include="SendGrid" Version="9.11.0" />
   </ItemGroup>
   <Target Name="MyPreCompileTarget" BeforeTargets="BeforeBuild">
     <Exec Command="npm run build" />
@@ -27,6 +28,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Application\Application.csproj" />
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     <ProjectReference Include="..\Persistence\Persistence.csproj" />
   </ItemGroup>
 
