Email service client initialized from startup with appsettings.json configuration

--- a/MotoSocia/appsettings.json
+++ b/MotoSocia/appsettings.json
@@ -11,5 +11,8 @@
     "SiteKey": "6LcgNRcUAAAAADjjVuc-bLgomkTTO6XLxm95xKy3",
     "SecretKey": "6LcgNRcUAAAAAND5pWOu_wKWi9VA9IMn6kwhcL8f"
   },
+  "SendGridEmailService": {
+    "APIKey":  "SENDGRIDAPIKEY"
+  },
   "AllowedHosts": "*"
 }
