--- a/MotoSocia/appsettings.json
+++ b/MotoSocia/appsettings.json
@@ -12,7 +12,7 @@
     "SecretKey": "6LcgNRcUAAAAAND5pWOu_wKWi9VA9IMn6kwhcL8f"
   },
   "SendGridEmailService": {
-    "APIKey":  "SENDGRIDAPIKEY"
+    "APIKey": "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"
   },
   "AllowedHosts": "*"
 }
